--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -17,6 +20,7 @@ header {
   background-color: #579c87;
   color: #fdcb46;
   text-align: center;
+  width: 100vw;
 }
 
 h1 {
@@ -43,10 +47,33 @@ article {
           flex-direction: column;
 }
 
+#lne {
+  background-color: #fcdfdb;
+  color: #492025;
+  width: 500px;
+  padding: 15px;
+  margin: 10px 0 68px 0;
+}
+
 section {
+  width: 500px;
+  margin: 0 5px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.sectionColone {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#imageMenu {
   -ms-flex-pack: distribute;
       justify-content: space-around;
 }
@@ -54,7 +81,7 @@ section {
 button {
   height: 38px;
   margin: 10px 3%;
-  padding: 5px 2%;
+  padding: 5px 15px;
   background-color: #579c87;
   border: none;
   border-radius: 15px;
@@ -68,13 +95,14 @@ img {
 }
 
 footer {
+  position: fixed;
+  bottom: 0;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   background-color: #579c87;
   text-align: center;
 }
