--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,15 @@
 $green: #579c87;
 $orange:#fdcb46;
 $white:#ffffff;
+$pink:#fcdfdb;
+$brown:#492025;
 
 body{
     height: 100vh;
     margin: 0;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     flex-direction: column;
 }
 
@@ -16,6 +19,7 @@ header{
     background-color: $green;
     color: $orange;
     text-align: center;
+    width: 100vw;
 }
 h1{
     font-family: sans-serif;
@@ -30,14 +34,33 @@ article{
     align-items: center;
     flex-direction: column;
 }
+
+#lne{
+    background-color: #fcdfdb;
+    color: #492025;
+    width: 500px;
+    padding: 15px;
+    margin: 10px 0 68px 0;
+}
 section{
+    width: 500px;
+    margin: 0 5px;
     display: flex;
+    justify-content: space-between;
+}
+
+.sectionColone{
+    flex-direction: column;
+}
+
+#imageMenu{
     justify-content: space-around;
 }
+
 button{
     height: 38px;
     margin: 10px 3%;
-    padding: 5px 2%;
+    padding: 5px 15px;
     background-color: $green;
     border: none;
     border-radius: 15px;
@@ -51,9 +74,11 @@ img{
 }
 
 footer{
+    position: fixed;
+    bottom: 0;
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: $green;
     text-align: center;
     
