--- a/style.scss
+++ b/style.scss
@@ -54,8 +54,11 @@ section{
 }
 
 #imageMenu{
+    width: 90vw;
     justify-content: space-around;
+
 }
+
 
 button{
     height: 38px;
@@ -66,11 +69,15 @@ button{
     border-radius: 15px;
     font-family: sans-serif;
     font: 1.5em sans-serif;
+    
+}
+a{
     color: $orange;
+    text-decoration: none;
 }
 
 img{
-    max-width: 20%;
+    max-width: 22%;
 }
 
 footer{
