--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
+@media screen and (max-width: 766px) {
+  section {
+    width: 300px;
+  }
+  #imageMenu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  button {
+    height: 76px;
+  }
+}
+
+@media screen and (min-width: 767px) {
+  section {
+    width: 600px;
+  }
+  button {
+    height: 38px;
+  }
+}
+
+@media screen and (min-width: 1279px) {
+  section {
+    width: 800px;
+  }
+  button {
+    height: 38px;
+  }
+}
+
 body {
   height: 100vh;
   margin: 0;
@@ -97,7 +130,6 @@ section {
 }
 
 button {
-  height: 38px;
   margin: 10px 3%;
   padding: 5px 15px;
   background-color: #579c87;
