--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 
 @media screen and (min-width: 1279px) {
   section {
-    width: 800px;
+    width: 50vh;
   }
   button {
     height: 38px;
@@ -56,7 +56,7 @@ header {
   background-color: #579c87;
   color: #fdcb46;
   text-align: center;
-  width: 70vh;
+  width: 66vh;
 }
 
 h1 {
@@ -72,8 +72,6 @@ article {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -109,7 +107,6 @@ article {
 }
 
 section {
-  width: 600px;
   margin: 0 5px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -127,13 +124,20 @@ section {
 }
 
 #imageMenu {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -ms-flex-pack: distribute;
       justify-content: space-around;
 }
 
 button {
   margin: 10px 3%;
-  padding: 5px 15px;
   background-color: #579c87;
   border: none;
   border-radius: 15px;
@@ -144,6 +148,13 @@ button {
 a {
   color: #fdcb46;
   text-decoration: none;
+}
+
+.clickmenu {
+  background-color: #fcdfdb;
+  width: 44%;
+  height: 44%;
+  margin: 3%;
 }
 
 img {
@@ -157,7 +168,7 @@ img {
 footer {
   position: fixed;
   bottom: 0;
-  width: 70vh;
+  width: 66vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
