--- a/style.scss
+++ b/style.scss
@@ -35,7 +35,7 @@ $cleargreen:#fdfffd;
 
 @media screen and (min-width: 1279px){
     section{
-        width: 800px;
+        width: 50vh;
     }
 
     button{
@@ -49,7 +49,6 @@ $cleargreen:#fdfffd;
 
 body{
     height: 100vh;
-    
     margin: 0;
     display: flex;
     justify-content: space-between;
@@ -62,7 +61,7 @@ header{
     background-color: $green;
     color: $orange;
     text-align: center;
-    width: 70vh;
+    width: 66vh;
 }
 h1{
     font-family: sans-serif;
@@ -73,7 +72,6 @@ h1{
 article{
     flex: 1;
     display: flex;
-    justify-content: space-around;
     align-items: center;
     flex-direction: column;
     margin: 40px 0 98px 0;
@@ -104,7 +102,6 @@ article{
 }
 
 section{
-    width: 600px;
     margin: 0 5px;
     display: flex;
     justify-content: space-between;
@@ -115,6 +112,9 @@ section{
 }
 
 #imageMenu{
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
 
 }
@@ -122,7 +122,6 @@ section{
 
 button{
     margin: 10px 3%;
-    padding: 5px 15px;
     background-color: $green;
     border: none;
     border-radius: 15px;
@@ -133,6 +132,13 @@ button{
 a{
     color: $orange;
     text-decoration: none;
+}
+
+.clickmenu{
+    background-color: $pink;
+    width: 44%;
+    height: 44%;
+    margin: 3%;
 }
 
 img{
@@ -146,7 +152,7 @@ img{
 footer{
     position: fixed;
     bottom: 0;
-    width: 70vh;
+    width: 66vh;
     display: flex;
     justify-content: space-around;
     background-color: $green;
