--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
     height: 26vh;
     width: calc(26vh * 0.7071);
   }
+  .h2Lne {
+    font-size: 1.2em;
+  }
   p {
     margin: 3px;
   }
@@ -14,6 +17,15 @@
 @media screen and (min-width: 768px) {
   h1 {
     font: bold 3.5em sans-serif;
+  }
+  .h2Lne {
+    font-size: 2em;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.2em;
   }
   button {
     font: 2vh sans-serif;
@@ -24,10 +36,10 @@
   }
   .fa-music {
     font-size: 2em;
+    margin: 0 10px;
   }
   p {
-    font-size: 1.6em;
-    margin: 10px;
+    margin: 5px;
   }
 }
 
@@ -88,6 +100,10 @@ h1 {
   letter-spacing: -0.075em;
 }
 
+.fontN {
+  font-weight: normal;
+}
+
 article {
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -98,12 +114,13 @@ article {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding-bottom: 100px;
 }
 
 .clickmenu {
@@ -128,7 +145,13 @@ article {
 #lne {
   background-color: #fcdfdb;
   font-family: cursive;
-  color: black;
+  color: #492025;
+}
+
+.h2Lne {
+  font-family: 'Roboto Slab', serif;
+  font-family: 'Alex Brush', cursive;
+  margin-top: 0;
 }
 
 .fa-music {
@@ -137,16 +160,34 @@ article {
 
 #lcf {
   background-color: #fff5fe;
-  font-family: serif;
+  font-family: 'Roboto Slab', serif;
+  font-family: 'EB Garamond', serif;
   color: #920fcf;
 }
 
 #pap {
   background-color: #edefef;
+  font-family: cursive;
+}
+
+.h2Pap {
+  font-family: 'Roboto Slab', serif;
+  font-family: 'Alex Brush', cursive;
+  font-family: 'Mr Dafoe', cursive;
+  color: blue;
 }
 
 #plt {
   background-color: #fdfffd;
+  font-family: cursive;
+}
+
+.h2Plt {
+  font-family: 'Alex Brush', cursive;
+  font-family: 'Mr Dafoe', cursive;
+  font-family: 'Roboto Slab', serif;
+  font-family: 'Merienda One', cursive;
+  color: chartreuse;
 }
 
 section {
@@ -157,6 +198,25 @@ section {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+#sectionlanote {
+  margin: 2%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+}
+
+#sectionlanote2 {
+  margin: 4%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .sectionColone {
