--- a/style.scss
+++ b/style.scss
@@ -20,8 +20,8 @@ $cleargreen:#fdfffd;
         width: calc(26vh * 0.7071);
     }
 
-    .h2Lne{
-        font-size: 1.2em;
+    .h2{
+        font-size: 1em;
     }
     p{
         margin: 3px;
@@ -33,19 +33,16 @@ $cleargreen:#fdfffd;
 @media screen and (min-width:768px){
 
     h1{
-        font: bold 3.5em sans-serif;
+        font: bold 2.5em sans-serif;
     }
 
-    .h2Lne{
-        font-size: 2em;
-    }
 
     h2{
-        font-size: 1.5em;
+        font-size: 1em;
     }
 
     h3{
-        font-size: 1.2em;
+        font-size: 1em;
     }
 
    
@@ -66,7 +63,7 @@ $cleargreen:#fdfffd;
     }
 
 }
-@media screen and (max-width: 1278px){
+@media screen and (max-width: 1023px){
     header{
         width: 100%;
     }
@@ -82,7 +79,7 @@ $cleargreen:#fdfffd;
 }
 
 
-@media screen and (min-width: 1279px){
+@media screen and (min-width: 1024px){
     header{
         width: 70.71vh;
     }
@@ -138,11 +135,10 @@ article{
     align-items: center;
     flex-direction: column;
     justify-content: space-around;
-    padding-bottom: 100px;
 }
 .clickmenu{
     background-color: $pink;
-    margin: 2% 1% 0 1%;
+    margin: 2%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -256,7 +252,7 @@ img{
 }
 
 #buttonMenu{
-    flex: 1;
+    
     align-items: center;
     
 }
