--- a/style.scss
+++ b/style.scss
@@ -20,8 +20,9 @@ $cleargreen:#fdfffd;
         width: calc(26vh * 0.7071);
     }
 
-    .h2{
+    h2{
         font-size: 1em;
+        margin: 2px 0;
     }
     p{
         margin: 3px;
