--- a/stylemenu.scss
+++ b/stylemenu.scss
@@ -227,7 +227,7 @@ section{
 
 #sectionlanote{
     margin: 4%;
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: center;
     text-align: center;
 }
