--- a/stylemenu.css
+++ b/stylemenu.css
@@ -27,7 +27,7 @@
     font: bold 2.5em sans-serif;
   }
   h2 {
-    font-size: 2.2em;
+    font-size: 2em;
     margin: 0;
   }
   .fa-music {
@@ -161,6 +161,7 @@ article {
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
+  margin: 1.5vh;
 }
 
 #lne {
