--- a/stylemenu.scss
+++ b/stylemenu.scss
@@ -48,7 +48,7 @@ $cleargreen:#fdfffd;
 
 
     h2{
-        font-size: 2.2em;
+        font-size: 2em;
         margin: 0;
     }
 
@@ -179,6 +179,7 @@ article{
     bottom: 0;
     justify-content: center;
     text-align: center;
+    margin: 1.5vh;
 }
 
 #lne{
