--- a/style.scss
+++ b/style.scss
@@ -8,94 +8,41 @@ $clearcyan:#edefef;
 $cleargreen:#fdfffd;
 
 
-@media screen and (max-width: 767px){
-    
-    button{
-        font: 1.4em sans-serif;
-    }
 
-    .clickmenu{
-        height: 26vh;
-        width: calc(26vh * 0.7071);
-    }
+@media screen and (max-width: 898px){
 
-    h2{
-        font-size: 0.7em;
-        margin: 2px 0;
-    }
-    p{
-        margin: 3px;
-        font-size: 0.7em;
-    }
-}
-
-@media screen and (min-width:768px){
-
-    h1{
-        font: bold 2.5em sans-serif;
-    }
-
-    h2{
-        font-size: 1.2em;
-    }
-
-    h3{
-        font-size: 1em;
-    }
-
-    button{
-        font: 2vh sans-serif;
-    }
-.clickmenu{
-        height: 35vh;
-        width: calc(35vh * 0.7071);
-    }
-    .fa-music{
-        font-size: 2em;
-        margin: 0 10px;
-    }
-    p{
-        margin:5px
-    
-    }
-
-}
-@media screen and (max-width: 1023px){
-    header{
-        width: 100%;
-    }
 
     main{
         width: 100%;
     }
 
     footer{
-        width: 100%;
+        justify-content: space-between;
     }
+
 }
 
 
-@media screen and (min-width: 1024px){
-    header{
+@media screen and (min-width: 899px){
+
+    main{
         width: 70.71vh;
     }
+
+    footer{
+        justify-content: space-around;
+    }
+
+    
+}
+
+
+
 
     .clickmenu{
         height: 32vh;
         width: calc(32vh * 0.7071);
     }
-
-    main{
-        width: 70.71vh;
-    }
-
-    footer{
-        width: 70.71vh;
-    }
-}
-
-
-
 
 
 body{
@@ -109,6 +56,7 @@ body{
 
 
 header{
+    width: 100%;
     background-color: $green;
     color: $orange;
     text-align: center;
@@ -216,9 +164,18 @@ a{
      
      padding: 0.5vh 4vh;
      font: 1.4em sans-serif;
- }
+}
 
- .afooter{
+footer{
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    display: flex;
+    background-color: $green;
+    text-align: center;
+}
+
+.afooter{
     padding: 20px;
     background-color: $green;
     border: none;
@@ -228,10 +185,4 @@ a{
 }
 
  
-footer{
-    bottom: 0;
-    display: flex;
-    justify-content: space-between;
-    background-color: $green;
-    text-align: center;
-}
+
